# japan-financial-plans

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
data/processed/: iDeCo.json  ふるさと納税.json  住宅ローン控除.json  新NISA.json  生命保険・医療保険.json  確定拠出年金企業型DC.json  高配当株・インデックス投資.json
data/raw/: iDeCo_20260516_032939.json  ふるさと納税_20260516_032958.json  住宅ローン控除_20260516_033017.json  新NISA_20260516_032920.json  生命保険・医療保険_20260516_033033.json  確定拠出年金企業型DC_20260516_033039.json  高配当株・インデックス投資_20260516_033048.json
reports/: INDEX.html  OVERVIEW.html  iDeCo.html  ふるさと納税.html  住宅ローン控除.html  新NISA.html  生命保険・医療保険.html  確定拠出年金企業型DC.html  高配当株・インデックス投資.html
src/japan_financial_plans/: __init__.py  collector.py  config.py  models.py  pipeline.py  processor.py  reporter.py  storage.py
