[project]
name = "japan-financial-plans"
version = "0.1.0"
description = "日本国内で実行可能なファイナンシャルプランの情報収集・整理ツール"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "httpx>=0.27",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8",
    "mypy>=1.10",
    "pytest-httpx>=0.30",
]

[project.scripts]
japan-financial-plans = "japan_financial_plans.pipeline:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
